feat: add TosController